--- a/VeloMax/MVVM/View/HomeView.xaml
+++ b/VeloMax/MVVM/View/HomeView.xaml
@@ -136,6 +136,93 @@
                    FontSize="20"
                    Margin="10,0,0,20"/>
                 </Border>
+                <Border Width="580"
+                                    Height="30"
+                                    CornerRadius="10"
+                                    Margin="-600,0,0,110">
+                    <Border.Style>
+                        <Style TargetType="Border">
+                            <Setter Property="Background" Value="white"/>
+                        </Style>
+                    </Border.Style>
+                    <StackPanel Orientation="Horizontal"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch">
+                        <TextBlock Text="N"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,0,0,0"/>
+                        <TextBlock Text="Date"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="60,0,0,0"/>
+                        <TextBlock Text="Client"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="60,0,0,0"/>
+                        <TextBlock Text="Destination"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="40,0,0,0"/>
+                        <TextBlock Text="Montant"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="40,0,0,0"/>
+                    </StackPanel>
+
+                </Border>
+                <ItemsControl ItemsSource="{Binding HomeOrders}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border Width="580"
+                                    Height="40"
+                                    CornerRadius="10"
+                                    Margin="-600,100,0,0">
+                                <Border.Style>
+                                    <Style TargetType="Border">
+                                        <Setter Property="Background" Value="white"/>
+                                    </Style>
+                                </Border.Style>
+                                <StackPanel Orientation="Horizontal"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch">
+                                    <TextBlock Text="{Binding Id}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                    <TextBlock Text="{Binding Date}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                    <TextBlock Text="{Binding Name}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                    <TextBlock Text="{Binding City}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="30,5,0,0"/>
+                                    <TextBlock Text="{Binding Price}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="50,5,0,0"/>
+                                </StackPanel>
+
+                            </Border>
+
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
                 <Border Width="300"
                         Height="220"
                         Background="#F8BD96"
