--- a/VeloMax/OrderWindow.xaml
+++ b/VeloMax/OrderWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VeloMax.BikePartWindow"
+<Window x:Class="VeloMax.OrderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,13 +7,13 @@
         xmlns:viewModel="clr-namespace:VeloMax.MVVM.ViewModel"
         xmlns:view="clr-namespace:VeloMax.MVVM.View"
         mc:Ignorable="d"
-        Title="BikePartWindow" Height="800" Width="1200"
+        Title="OrderWindow" Height="800" Width="1200"
         WindowStyle="None"
         Background="Transparent"
         AllowsTransparency="True">
 
     <Window.DataContext>
-        <viewModel:BikePartsViewModel/>
+        <viewModel:OrderWindowModel/>
     </Window.DataContext>
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Close"
