--- a/VeloMax/MVVM/View/HomeView.xaml
+++ b/VeloMax/MVVM/View/HomeView.xaml
@@ -104,7 +104,7 @@
                         Background="#F8BD96"
                         CornerRadius="10"
                         Margin="25,25,0,0">
-                    <TextBlock Text="Ventes mensuelles"
+                    <TextBlock Text="Statistiques"
                    Foreground="White"
                    HorizontalAlignment="Left"
                    FontSize="20"
@@ -115,7 +115,7 @@
                         Background="#F8BD96"
                         CornerRadius="10"
                         Margin="30,25,0,0">
-                    <TextBlock Text="Statistiques"
+                    <TextBlock Text=""
                    Foreground="White"
                    HorizontalAlignment="Left"
                    FontSize="20"
@@ -176,13 +176,13 @@
                     </StackPanel>
 
                 </Border>
-                <ItemsControl ItemsSource="{Binding HomeOrders}">
+                <ItemsControl ItemsSource="{Binding HomeOrders}" Margin="0,80,0,0">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Width="580"
                                     Height="40"
                                     CornerRadius="10"
-                                    Margin="-600,100,0,0">
+                                    Margin="-600,10,0,0">
                                 <Border.Style>
                                     <Style TargetType="Border">
                                         <Setter Property="Background" Value="white"/>
@@ -215,7 +215,8 @@
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
-                                                   Margin="50,5,0,0"/>
+                                                   Margin="50,5,0,0"
+                                               HorizontalAlignment="Center"/>
                                 </StackPanel>
 
                             </Border>
