--- a/VeloMax/MVVM/View/HomeView.xaml
+++ b/VeloMax/MVVM/View/HomeView.xaml
@@ -115,12 +115,49 @@
                         Background="#F8BD96"
                         CornerRadius="10"
                         Margin="30,25,0,0">
-                    <TextBlock Text=""
+                    <TextBlock Text="Meilleurs clients"
                    Foreground="White"
                    HorizontalAlignment="Left"
                    FontSize="20"
                    Margin="10,0,0,20"/>
                 </Border>
+                <ItemsControl ItemsSource="{Binding BestClients}" Margin="0,80,0,0">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border Width="580"
+                                    Height="40"
+                                    CornerRadius="10"
+                                    Margin="0,10,0,0">
+                                <Border.Style>
+                                    <Style TargetType="Border">
+                                        <Setter Property="Background" Value="white"/>
+                                    </Style>
+                                </Border.Style>
+                                <StackPanel Orientation="Horizontal"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch">
+                                    <TextBlock Text="{Binding Name}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                    <TextBlock Text="{Binding FName}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                    <TextBlock Text="{Binding Quantity}"
+                                                   Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10,5,0,0"/>
+                                </StackPanel>
+
+                            </Border>
+
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </StackPanel>
         <StackPanel>
